// Copyright 2011, Tencent Inc.
// Author: Yongsong Liu <ericliu@tencent.com>

option java_package="com.soso.poppy";

package poppy;

message RpcServerOptions {
    // Type of Service http://en.wikipedia.org/wiki/Type_of_service
    optional int32 tos = 1;
}

